# metapack

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
conda/: conda-environment.yaml  conda-requirements.txt  pip-requirements.txt
dev/: develop.sh  latest.txt  prep-linux.sh  push.sh  requirements.txt
docker/server/: Dockerfile  README.md  build_metatab.sh  compose.yaml  metapack-template.yaml  metapack.yaml
docker/test/: Dockerfile  Makefile  setup-git.sh  setup-pip.sh  setup.sh
docs/: .buildinfo  CNAME  GeneratingWithFunctions.rst  Makefile  commands.html  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  overview.html  requirements.txt  search.html  searchindex.js  using.html
docs/_sources/: index.rst.txt  overview.rst.txt
docs/_static/: documentation_options.js
docs/source/: GeneratingRows.rst  Geographic.rst  GettingStarted.rst  JustEnough.rst  Publishing.rst  Transforms.rst  WranglingPackages.rst  commands.rst  conf.py  index.rst  metapack.rst  using.rst
docs/source/cli/: config.rst  doc.rst  index.rst  info.rst  mp.rst  open.rst  run.rst  search.rst
metapack/: __init__.py  appurl.py  cli.py  constants.py  doc.py  exc.py  html.py  index.py  jupyter.py  notebook.py  package.py  rowgenerator.py  terms.py  util.py
metapack/cli/: build.py  config.py  core.py  doc.py  dump.py  edit.py  index.py  info.py  install.py  install_file.py  install_git.py  metaaws.py  metakan.py  metapack.py  metas3.py  metatab.py  metaworld.py  mp.py  new.py  notebook.py  old.py  open.py  run.py  s3.py  search.py  stats.py  update.py  url.py  wp.py
metapack/cli/test/: core.py
metapack/jupyter/: __init__.py  convert.py  core.py  exec.py  exporters.py  ipython.py  magic.py  markdown.py  metapack.py  pandas.py  preprocessors.py
metapack/jupyter/templates/: html_wordpress.tpl  markdown_hugo.tpl  notebook.tplx
metapack/jupyter/test/: New Notebook Style.ipynb
metapack/package/: core.py  csv.py  excel.py  filesystem.py  s3.py  zip.py
metapack/support/: __init__.py  gitignore  metapack-defaults.csv  pylib.py
metapack/support/templates/: documentation.md  long_documentation.md  wordpress.md
metapack/support/templates/wordpress/: contacts.md  distributions.md  documentation.md  footer.md  header.md  images.md  notes.md  references.md  resources.md
metapack/test/: Dockerfile  support.py  test_basic.py  test_create.py  test_geo.py  test_ipy.py  test_issues.py  test_packages.py  test_publish.py  test_suite.py  test_urls.py
metapack/test/test_data/: empty_resources.csv  mpurls.csv  packages.csv
metapack/test/test_data/line/: line-oriented-doc-bib.txt  line-oriented-doc.txt
sphinx/: Makefile  requirements.txt
sphinx/source/: commands.rst  conf.py  index.rst  overview.rst  using.rst
src/metapack/: __init__.py  appurl.py  categorical.py  constants.py  doc.py  env.py  exc.py  html.py  index.py  jupyter.py  package.py  rowgenerator.py  terms.py  util.py
src/metapack/cli/: __init__.py  config.py  core.py  doc.py  index.py  info.py  mp.py  open.py  run.py  search.py
src/metapack/support/: __init__.py  gitignore
support/: jupyter-wp.css  jupyter.css
test/: test_basic.py  test_ipy.py  test_issues.py  test_packages.py  test_publish.py  test_suite.py
test-data/notebooks/: ConversionTest.ipynb
tests/: Dockerfile  Makefile  conftest.py  support.py  test_bugs.py  test_display.py  test_issues.py  test_packages.py  test_suite.py  test_urls.py  test_version.py
tests/test_data/line/: line-oriented-doc-datafiles.txt
(+13 files in other folders)
